--- a/level1-task3/src/style.css
+++ b/level1-task3/src/style.css
@@ -12,17 +12,21 @@ body {
     font-family: Arial, Helvetica, sans-serif;
     background-color: hsl(0, 0%, 15%);
     border-radius: 15px;
-    width: 500px;
-    padding: 20px;
+    width: 350px;
+    padding: 15px;
+    transform: scale(0.8);
+    transform-origin: center;
+    aspect-ratio: 1/1.4;
 }
 #display {
     width: 90%;
-    height: 100px;
+    height: 80px;
     border: none;
     background-color: #a7af7c;
-    font-size: 3.5rem;
-    padding: 15px;
+    font-size: 2.5rem;
+    padding: 10px 15px;
     margin-top: 10px;
+    margin-bottom: 15px;
     text-align: right;
     border-radius: 5px;
     color: white;
@@ -34,24 +38,31 @@ body {
 #buttons {
     display:grid;
     grid-template-columns: repeat(4, 1fr);
-    gap: 10px;
+    grid-template-rows: repeat(5, 1fr);
+    gap: 8px;
 }
 
 #delete {
-    font-size: 2.4rem;
+    font-size: 1.5rem;
 }
 #calculate {
+    grid-column: 4;
     grid-row: span 2;
+    height: auto;
+    font-size: 4 rem;
+    background-color: hsl(39, 100%, 50%);
 }
   
 button {
     background-color: hsl(0, 0%, 30%);
     border: none;
     color: white;
-    width: 100px;
-    border-radius: 50px;
+    width: auto;
+    margin: 0;
+    height: 60%;
+    border-radius: 35px;
     border: none;
-    font-size: 3rem;
+    font-size: 2rem;
     font-weight: bold;
     height: 100px;
     box-shadow: inset -8px 0px 8px rgba(0, 0, 0.15);
@@ -71,4 +82,13 @@ button:active {
 }
 .operator-btn:active {
     background-color: hsl(133, 90%, 75%);
+}
+@media (max-width: 400px) {
+    #calculator {
+        width: 280px;
+    }
+    button {
+        height: 50px;
+        font-size: 1.5rem;
+    }
 }
