Added and styled images

--- a/level1-task2/src/style.css
+++ b/level1-task2/src/style.css
@@ -8,6 +8,7 @@ padding: 0;
     background-image: url("../images/beauty.jpg");
     background-size: cover;
     background-position: center;
+    backdrop-filter: blur(10px);
     height: 100vh;
     position: relative;
     font-family: Arial, Helvetica, sans-serif;
@@ -40,10 +41,60 @@ ul li a{
     margin-top: -3%;
     font-size: 16px;
     font-weight: bold;
-    transition: all 0.4s ease;      
+    transition: all 0.4s ease;
+    color: darkslategray;      
 }
 ul li a:hover{
     color: rgb(230, 104, 59);
-    background-color: darkslategray;
-    border: none;
+}
+.info {
+    margin-left: 7%;
+    margin-top: 8%;
+}
+.info h1{
+    font-size: 65px;
+    color: rgb(36, 32, 30)
+}
+.info h3 {
+    font-size: 18px;
+    line-height: 24px;
+}
+.info span {
+    color: rgb(230, 104, 59);
+}
+.info a {
+    text-decoration: none;
+    color: white;
+    background-color: rgb(36, 32, 30);
+    padding: 10px 18px;
+    margin: 26px 0;
+    border-radius: 10px;
+    font-size: 16px;
+    display: inline-block;
+    transition: all 0.4s ease;                          
+}
+.info a:hover {
+    background-color: rgb(59, 174,209);
+}
+.image {
+    width: 300px;
+    position : absolute;
+    right: 100px;
+    bottom: 0;
+    border-radius: 100px;
+    overflow: hidden;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.image img {
+    width: 100%;
+    height: auto;
+    object-fit: cover;
+    display: block;
+    position: relative;
+    
+}
+.image img:hover {
+    transform: translate(10px);
 }
