--- a/level1-task2/src/style.css
+++ b/level1-task2/src/style.css
@@ -2,17 +2,17 @@
 margin: 0;
 padding: 0;
 scroll-behavior: smooth;
+background-color: linear-gradient(to right, #6cff52, #3ec5ff);
+color: black;
+font-family: Arial, Helvetica, sans-serif;
 }
 
 .main{
     width: 100%;
-    background-image: url("../images/beauty.jpg");
-    background-size: cover;
-    background-position: center;
     backdrop-filter: blur(10px);
     height: 100vh;
     position: relative;
-    font-family: Arial, Helvetica, sans-serif;
+
 }
 .navbar{
     display: flex;
@@ -37,7 +37,10 @@ scroll-behavior: smooth;
     background-clip: text;
     color: transparent;
 }
+span {
+color: rgb(230, 104, 59);
 
+}
 
 ul {
     margin-top: -4%;
@@ -62,14 +65,17 @@ ul li a:hover{
 .info {
     margin-left: 7%;
     margin-top: 3%;
+    text-align: justify;
+    max-width: 600px;
 }
 .info h1{
     font-size: 65px;
     color: rgb(36, 32, 30)
 }
-.info h3 {
+.info p {
     font-size: 18px;
     line-height: 24px;
+    
 }
 .info span {
     color: rgb(230, 104, 59);
@@ -113,4 +119,193 @@ ul li a:hover{
     font-size: 3rem;
     color: white;
     display: none;
+}
+::-webkit-scrollbar {
+    width: 10px;
+    background: transparent;
+}
+::-webkit-scrollbar-thumb {
+    background: #6cff52;
+    border-radius: 10px;
+}
+#about {
+    display: flex;
+    
+    justify-content: center;
+    align-items: center;
+    gap: 5em;
+}
+#about img {
+    width: 30vw;
+
+    border-radius: 1em;
+}
+.about-box {
+    display: flex;
+    flex-direction: column;
+    text-align: left;
+}
+.about-box h1{
+    font-size: 5em;
+    margin-bottom: 20px;
+}
+.about-box p{
+    color: black;
+    opacity: 0.8;
+    margin-bottom: 40px;
+    line-height: 1.6;
+}
+.skills {
+    display: flex;
+    text-align: left;
+    gap: 10em;
+}
+.skills ul {
+    font-size: 1.3em;
+    font-weight: 500;
+    display: flex;
+    flex-direction: column;
+    color: black;
+    opacity: 0.6;
+    align-items: baseline;
+}
+.skills ul li span{
+    display: flex;
+    gap: 0.5em;
+    align-items: center;
+    font-size: 1.3em;
+    transition: 0.3s ease;
+}
+.skills ul li:hover {
+    transform: translate(20px);
+}
+.skills ul li i {
+    font-size: 1.2em;
+}
+.about-box h2 {
+    font-size: 2.5em;
+    margin-bottom: 40px;
+
+}
+.projects{
+    background-image: url("../images/beauty.jpg");
+    background-size: cover;
+    background-position: center no repeat;
+}
+.projects-box {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    place-items: center;
+   margin: 5rem;
+    gap: 23em;
+    row-gap: 5em;
+}
+.projects-card {
+    max-width: 400px;
+    height: 600px;
+    background-color: rgba(0, 0, 0, 0.3);
+    backdrop-filter: blur(30px);
+    border: 2px solid rgba(255, 255, 255, 0.1);
+    border-radius: 5rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 5rem 2rem;
+    text-align: center;
+    gap: 2rem;
+    transition: all 0.4s ease;
+    cursor: pointer;
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
+    overflow: hidden;
+}
+.projects-card:hover {
+    transform: scale(1.05);
+    box-shadow: 0 0 30px rgba(0, 0, 0, 0.3);
+}
+.projects-card img {
+    max-width: 18vw;
+    object-fit: cover;
+}
+.projects-card h3 {
+    font-size: 3rem;
+    color: white;
+}
+.projects-card p {
+    font-size: 1.6rem;
+    opacity: 0.8;
+}
+.btn {
+    background-color: rgb(36, 32, 30);
+    color: white;
+    padding: 1rem 2rem;
+    border-radius: 5rem;
+    font-size: 1.5rem;
+    font-weight: 600;
+    text-decoration: none;
+    transition: all 0.4s ease;
+    cursor: pointer;
+}
+.contact {
+    background-image: url("../images/beauty.jpg");
+    background-size: cover;
+    background-position: center;
+}
+.contact h2 {
+    margin-bottom: 3rem;
+}
+.contact form {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 3rem;
+    margin: 5rem auto;
+    text-align: center;
+
+}
+.contact form input-box {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+}
+.contact form .input-box input, 
+.contact form textarea {
+    width: 70%;
+    padding: 2.5rem;
+    border-radius: 2rem;
+    border: 1px solid rgba(255, 255, 255, 0.3);
+    background-color: rgba(255, 255, 255, 0.3);
+    font-size: 1.8rem;
+    margin: 1.5rem 0;
+    resize: none;
+}
+.contact form .btn {
+    margin-top: 2rem;
+}
+.footer .social a:hover {
+    color: rgb(230, 104, 59);
+    transform: scale(1.2)translate(-10px);
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
+}
+.footer ul {
+   margin-top: 0;
+   padding: 0;
+   font-size:18px;
+   line-height: 1.6;
+   margin-bottom: 0;
+   text-align: center;
+}
+.footer ul li a {
+    text-decoration: none;
+    color: blue;
+    border-bottom: 3px solid transparent;
+    transition: all 0.4s ease;
+}
+.footer ul li a:hover {
+    border-bottom : 2px solid rgb(230, 104, 59);    
+}
+.footer ul li {
+    list-style: none;
+    display: inline-block;
+    padding: 0 15px;
 }
