--- a/level1-task2/src/style.css
+++ b/level1-task2/src/style.css
@@ -37,6 +37,8 @@ font-family: Arial, Helvetica, sans-serif;
     background-clip: text;
     color: transparent;
 }
+
+
 span {
 color: rgb(230, 104, 59);
 
@@ -116,17 +118,12 @@ ul li a:hover{
 .image:hover .design {
     left: 55%;
 }
-.menu {
-    font-size: 3rem;
-    color: white;
-    display: none;
-}
 ::-webkit-scrollbar {
-    width: 10px;
+    width: 5px;
     background: transparent;
 }
 ::-webkit-scrollbar-thumb {
-    background: #6cff52;
+    background: #2578C2;
     border-radius: 10px;
 }
 .heading {
@@ -156,7 +153,7 @@ ul li a:hover{
     margin-bottom: 20px;
 }
 .about-box p{
-    color: black;
+    color: rgb(36, 32, 30);
     margin-bottom: 40px;
     line-height: 1.6;
     font-size: 18px;
@@ -260,6 +257,13 @@ ul li a:hover{
 .btn:hover {
     background-color: rgb(59, 174, 209);
 }
+#contact-info{
+    font-size: 2rem;
+    background: linear-gradient(to right, #6cff52, #3ec5ff);
+    background-clip: text;
+    color: transparent;
+    text-align: center;
+}
 .contact {
     background-color: #fdfdfd;
     margin-left: 7%;
@@ -271,33 +275,32 @@ ul li a:hover{
     display: flex;
     align-items: center;
     justify-content: center;
-    gap: 3rem;
-    margin: 5rem auto;
     text-align: center;
 
 }
-.contact form input-box {
+.contact form .input-box {
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
 }
 .contact form .input-box input, 
 .contact form textarea {
-    width: 70%;
-    padding: 2.5rem;
+    width: 80%;
+    padding: 1rem;
     border-radius: 2rem;
     border: 1px solid rgb(244, 3, 3);
     background-color: rgba(255, 255, 255, 0.3);
-    font-size: 1.8rem;
+    font-size: 1rem;
     margin: 1.5rem 0;
     color:black;
     resize: none;
 }
 .contact form .btn {
     margin-top: 2rem;
+    border:none;
 }
 .footer {
-    background-color: #fdfdfd;
+    background-color:#CCC6EC;
     bottom: 0;
     width: 100%;
     padding: 40px 0;
@@ -338,4 +341,35 @@ ul li a:hover{
     font-size: 1.5rem;
     margin-top: 2rem;
     color: rgb(36, 32, 30);
+}
+@media (max-width: 768px) {
+    .navbar {
+        width: 100%;
+        padding: 10px 0;
+    }
+    .navbar .logo {
+        font-size: 1.5em;
+    }
+    .navbar ul li {
+        padding: 5px 10px;
+    }
+    .info h1 {
+        font-size: 3em;
+    }
+    .info p {
+        font-size: 1.2em;
+    }
+    .image img {
+        width: 80%;
+        height: auto;
+        bottom: -50px;
+    }
+    #about {
+        flex-direction: column;
+        align-items: center;
+    }
+    .contact form {
+        flex-direction: column;
+        align-items: center;            
+    }
 }
