--- a/level1-task1/src/style.css
+++ b/level1-task1/src/style.css
@@ -1,6 +1,7 @@
 * {
   margin: 0;
     padding: 0;  
+    box-sizing: border-box;
 }
 .main {
     width: 100%;
@@ -13,10 +14,41 @@
   width: 1200px;
   height: 75px;
   margin: 0 auto;  
+  display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding:0 20px;
 }
+
 .icon {
   width: 100px;
   height: 100px;
-  margin-top: 10px;
-  float: left;
+  margin-top: 50px;
+  
+}
+.menu {
+  width: 400px;
+  height: 70px;
+  
+}
+ul {
+  display:flex;
+justify-content: space-between;
+    align-items: center;
+    gap: 40px;
+}
+ul li {
+  list-style: none;
+  margin-top: 27px;
+  font-size: 14px;
+}
+ul li a {
+  text-decoration: none;
+  color: white;
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: bold;
+  transition: 0.4s ease-in-out;
+}
+ul li a:hover {
+  color: #f1c40f;
 }
