--- a/level1-task1/src/style.css
+++ b/level1-task1/src/style.css
@@ -2,6 +2,7 @@
   margin: 0;
     padding: 0;  
     box-sizing: border-box;
+    font-family: Arial, Helvetica, sans-serif;
 }
 .main {
     width: 100%;
@@ -51,4 +52,41 @@ ul li a {
 }
 ul li a:hover {
   color: #f1c40f;
+}
+.search {
+  width: 300px;
+  height: 70px;
+  margin-top: 50px;
+}
+.srch {
+  width: 200px;
+  height: 40px;
+  background: transparent;
+  border-radius: 5px;
+  border: 1px solid #f1c40f;
+  color: white;
+  font-size: 16px;
+  margin-top: -10px;
+  padding: 10px;
+  border-right: none;
+  border-bottom-left-radius: 5px;
+    border-top-left-radius: 5px;
+}
+.srch:focus {
+  outline: none;
+}
+.btn {
+  width: 80px;
+  height: 40px;
+  background: #f1c40f;
+  border-radius: 5px;
+  border: 2px solid #f1c40f;
+  border-bottom-left-radius: 5px;
+    border-top-right-radius: 5px;
+  color: white;
+  margin-top: -10px;
+  font-size: 15px;
+}
+.btn:focus {
+  outline: none;
 }
