Added content to the hero section

--- a/level1-task1/src/style.css
+++ b/level1-task1/src/style.css
@@ -90,3 +90,25 @@ ul li a:hover {
 .btn:focus {
   outline: none;
 }
+.content {
+  width: 80%;
+  position: relative;
+  height: auto;
+    margin: 0 auto;
+    color: white;
+  
+  
+}
+.content .par{
+    padding-left: 20px;
+    padding-bottom: 25px;
+    letter-spacing: 1.2px;
+    line-height: 30px;
+    }
+.content h1 {
+  font-size: 50px;
+  margin-top: 9%;
+  padding-left: 20px;
+  letter-spacing: 2px;
+
+}
